samples/_failures_safe/1761249745_c22b3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30172370.c: In function ‘main’:
./samples/SAFE/__tmp_30172370.c:139:9: error: expected declaration or statement at end of input
  139 |         fprintf(stderr, "Failed to add compression block 1\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_30172370.c:139:9: error: expected declaration or statement at end of input
